fix(grid/grid): up item color contrast

--- a/src/grid/grid.css
+++ b/src/grid/grid.css
@@ -43,13 +43,13 @@
   right: 0;
   bottom: 0;
   transition: box-shadow 0.7s cubic-bezier(0.165, 0.84, 0.44, 1);
-  box-shadow: inset 0 0 0 0 hsl(0, 0%, 80%),
-              inset 0 0 0 0 hsl(0, 0%, 90%);
+  box-shadow: inset 0 0 0 0 hsl(0, 0%, 69%),
+              inset 0 0 0 0 hsl(0, 0%, 47%);
 }
 
 .grid-item--active .grid-item__overlay {
-  box-shadow: inset 0 0 0 0.313rem hsl(0, 0%, 80%),
-              inset 0 0 0 0.938rem hsl(0, 0%, 90%);
+  box-shadow: inset 0 0 0 0.313rem hsl(0, 0%, 69%),
+              inset 0 0 0 0.938rem hsl(0, 0%, 47%);
 }
 
 .grid-item--active img,
@@ -63,7 +63,6 @@
 .grid-item--active .tv {
   transform: scale(0.95, 0.89);
 }
-
 .grid-item img {
   max-width: 100%;
   width: 100%;
@@ -76,7 +75,6 @@
   width: 100%;
   max-width: 100%;
   height: auto;
-  /*height: 17%;*/
 }
 
 @media (max-width: 768px) {
